--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>TelegramBot</name>
 	<description>Demo project for Spring Boot</description>
+	<properties>
+		<java.version>21</java.version>
+		<telegram.version>6.9.0</telegram.version>
+	</properties>
 	<url/>
 	<licenses>
 		<license/>
@@ -26,9 +30,6 @@
 		<tag/>
 		<url/>
 	</scm>
-	<properties>
-		<java.version>21</java.version>
-	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -36,10 +37,29 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.telegram</groupId>
+			<artifactId>telegrambots</artifactId>
+			<version>${telegram.version}</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
